--- a/build.gradle
+++ b/build.gradle
@@ -28,3 +28,11 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+// Evita tener que poner el nombre en todos los parametros de las Requests
+tasks.withType(JavaCompile) {
+  options.compilerArgs = ['-parameters']
+  doFirst {
+      println "Compiler args: ${options.compilerArgs}"
+  }
+}
