--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,6 @@ logging.pattern.console=${acing.formatofecha} [%thread] %highlight(%-5level) %cy
 
 #fichero log
 logging.file.name=logs/papeleria.log
+
+#Necesario para que DAOImpl pueda implementar un DAO...
+spring.main.allow-circular-references=true
