Cambiando API para tener facil acceso a id y tipo

--- a/build.gradle
+++ b/build.gradle
@@ -39,3 +39,8 @@ tasks.withType(JavaCompile) {
       println "Compiler args: ${options.compilerArgs}"
   }
 }
+
+// Para desplegar en Heroku
+tasks.named("jar") {
+	enabled=false
+}
