--- a/src/main/resources/config/gestionBBDD.properties
+++ b/src/main/resources/config/gestionBBDD.properties
@@ -14,18 +14,18 @@ hibernate.enable_lazy_load_no_trans=true
 #spring.datasource.hiraki.maximum-pool-size=2
 
 # AivenMySQL
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://${host-aivenMySQL}:${puerto-aivenMySQL}/${Database_name-aivenMySQL}?ssl=require&user=${usuario-aivenMySQL}&password=${password-aivenMySQL}
-#spring.datasource.username=${usuario-aivenMySQL}
-#spring.datasource.password=${password-aivenMySQL}
-#hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://${host-aivenMySQL}:${puerto-aivenMySQL}/${Database_name-aivenMySQL}?ssl=require&user=${usuario-aivenMySQL}&password=${password-aivenMySQL}
+spring.datasource.username=${usuario-aivenMySQL}
+spring.datasource.password=${password-aivenMySQL}
+hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # AivenSQL (postgreSQL)
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://${host-aivenPostgreSQL}:${puerto-aivenPostgreSQL}/${Database_name-aivenPostgreSQL}?ssl=require&user=${usuario-aivenPostgreSQL}&password=${password-aivenPostgreSQL}
-spring.datasource.username=${usuario-aivenPostgreSQL}
-spring.datasource.password=${password-aivenPostgreSQL}
-hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://${host-aivenPostgreSQL}:${puerto-aivenPostgreSQL}/${Database_name-aivenPostgreSQL}?ssl=require&user=${usuario-aivenPostgreSQL}&password=${password-aivenPostgreSQL}
+#spring.datasource.username=${usuario-aivenPostgreSQL}
+#spring.datasource.password=${password-aivenPostgreSQL}
+#hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # SQL EXPRESS
 #spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
