completando la seguridad de la API y sin que pida el passwords para heroku

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.application.name=mipapeleria
 misRepositorios=es.mde.repositorios
 misEntidades=es.mde.entidades
 
+entidadSecurity=es.mde.security.usuarios
+
 # Del log
 
 # Prueba con niveles
@@ -25,3 +27,9 @@ logging.file.name=logs/papeleria.log
 
 #Necesario para que DAOImpl pueda implementar un DAO...
 spring.main.allow-circular-references=true
+
+# Spring Security Autenticacin Bsica (no los subiriamos...)
+spring.security.user.name=jpueala
+spring.security.user.password=jpueala
+
+server.port=8086
